# tokay

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  ROADMAP.md  String.tok  TODO.md  Until.tok  VM.md  build.rs  build.tok  calls.md  calls.txt  etareneg.awk  g.tok  g2.tok  g3.tok  minicalc.tok  planets.tok  planets2.tok  readme.tok  readme1.tok  s.txt  todo.md  tokay.bnf  tokay.md  tokay.tok  until.tok  usecase.tok  vm.tok
.github/workflows/: main.yml
codingspace/: try.py
examples/: calc.tok  expr.tok  expr_from_readme.tok  expr_with_ast.tok  expr_with_spaces.tok  factorial.tok  factorial2.tok  faculty.tok  faculty2.tok  fibonacci.tok  fibonacci2.tok  json.tok  minicalc.tok  planets.tok  planets2.tok  replace-builtins.tok  tokay.tok  wc.tok
gen_grammar/: README.md
grammar-gen/: Makefile  README.md
macros/: Cargo.toml  LICENSE  README.md
macros/src/: lib.rs  signature.tok
serde_test/compile/: Cargo.toml
serde_test/compile/src/: main.rs
serde_test/run/: Cargo.toml
serde_test/run/src/: main.rs
src/: README.md  _builtins.rs  _builtins.tok  builtin.rs  ccl.rs  compiler.rs  error.rs  lib.rs  main.rs  main.yaml  map.rs  parser.rs  prelude.tok  reader.rs  repl.rs  repl.tok  test.rs  tokay.rs  token.rs  utils.rs  value.rs
src/builtin/: _std.rs  mod.rs  range.rs  string.rs  token.rs
src/compiler/: Tokay.tok  _parser.rs  _tokay.cbor  _tokay.rs  ast.rs  compiler.rs  grammar.rs  linker.rs  macros.rs  mod.rs  parser.rs  prelude.rs  scope.rs  test.rs  tokay.cbor  tokay.tok  usage.rs
src/compiler/gen_grammar/: Makefile  README.md
src/compiler/gen_parser/: Makefile  README.md
src/compiler/iml/: alt.rs  expect.rs  if_.rs  iml_alt.rs  iml_block.rs  iml_expect.rs  iml_if.rs  iml_loop.rs  iml_not.rs  iml_peek.rs  iml_repeat.rs  iml_sequence.rs  imlop.rs  imlparselet.rs  imlprogram.rs  imlvalue.rs  loop_.rs  mod.rs  not.rs  op.rs  parselet.rs  peek.rs  repeat.rs  result.rs  sequence.rs  usage.rs  value.rs
src/compiler/parser/: _tokay.cbor  _tokay.rs
src/tests/: testcase_compiler_identifier_names.tok
src/value/: README.md  Value.tok  callable.rs  dict.rs  dict2.rs  dynbuiltin.rs  func.rs  iter.rs  list.rs  mapiter.rs  method.rs  methoditer.rs  mod.rs  numeric.rs  object.rs  parselet.rs  refvalue.rs  str.rs  string.rs  token.rs  value.rs  value.tok
src/value/iter/: enumiter.rs  iter.rs  mapiter.rs  methoditer.rs  mod.rs
src/vm/: accept.rs  binaryop.rs  capture.rs  context.rs  mod.rs  op.rs  op_block.rs  op_chars.rs  op_expect.rs  op_if.rs  op_loop.rs  op_match.rs  op_not.rs  op_peek.rs  op_repeat.rs  op_sequence.rs  parselet.rs  program.rs  reject.rs  runtime.rs  thread.rs  tok_chars.rs  tok_match.rs  unaryop.rs  vm.rs
tests/: aggregates.tok  assign_op.tok  ast_offset.tok  begin_end.tok  binary_op_add.tok  binary_op_div.tok  binary_op_divi.tok  binary_op_mod.tok  binary_op_mul.tok  binary_op_sub.tok  bool.tok  builtin.tok  builtin_ast_ondemand.tok  builtin_chr.tok  builtin_offset.tok  builtin_ord.tok  builtin_repr.tok  builtin_type.tok  captures.tok  comparison.tok  comparison_captures.tok  compiler_identifiers.tok  deref.tok  dict.tok  dict_clone.tok  dict_get_set_item.tok  dict_iter.tok  dict_len.tok  dict_merge.tok  dict_pop.tok  dict_upsert.tok  err_break_continue.tok  err_compiler_identifier_names.tok  error.tok  expressions.tok  float.tok  for.tok  generics_resolve.tok  if_else.tok  inline_assign.tok  (+99 more)
