[package]
name = "tokay-macros"
version = "0.5.0"
description = "Macro support for Rust-native builtin functions for the Tokay programming language."
authors = ["Jan Max Meyer <jmm@phorward.de>"]
homepage = "https://tokay.dev/"
repository = "https://github.com/tokay-lang/tokay"
license = "MIT"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
tokay_04 = { package = "tokay", version = "0.4" }
quote = "1.0"
syn = { version = "1.0", features = ["full", "fold", "extra-traits"] }
proc-macro2 = "1.0"
glob = "0.3"
